--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
     <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
-        android:name=".MyRide3"
+        android:name=".DriveEZ"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -25,8 +25,8 @@
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity android:name=".AddContact" />
         <activity android:name=".CarMode" />
-        <activity android:name=".settings" />
-        <activity android:name=".AutoReply" />
+        <activity android:name=".AutoReply"
+            android:label="Settings"/>
         <activity android:name=".RideModeOn" />
         <activity
             android:name=".SplashScreen"
